<resources>
    <string name="app_name">PhotoEditorApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="choose_photo_from">Choose photo from:</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="welcome_to_photo_editor">Welcome to photo editor</string>
    <string name="crop">Crop</string>
    <string name="apply">Apply</string>
    <string name="filtered_photo">filtered photo</string>
    <string name="original_to_grey">Original to grey</string>
    <string name="original_to_colored_sketch">Original to colored</string>
    <string name="original_to_soft">Original to soft</string>
    <string name="original_to_soft_color">Original to soft color</string>
    <string name="gray_to_sketch">Gray to sketch</string>
    <string name="gray_to_colored_sketch">Gray to colored sketch</string>
    <string name="gray_to_soft_sketch">Gray to soft sketch</string>
    <string name="gray_to_soft_color">Gray to soft color</string>
    <string name="sketch_to_color_sketch">Sketch to color sketch</string>
    <string name="reset">Reset</string>
    <string name="clear">CLEAR</string>
    <string name="undo">UNDO</string>
    <string name="blur">Blur</string>
    <string name="emboss">Emboss</string>
    <string name="normal">Normal</string>
    <string name="width">Width</string>
    <string name="tolerance">Tolerance</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="color_preview">Color preview</string>
    <string name="paint">Paint</string>
    <string name="home">Home</string>
    <string name="save_as_jpg">Save as JPG</string>
    <string name="save_as_jpeg">Save as JPEG</string>
    <string name="save_as_png">Save as PNG</string>
</resources>
