<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.paintimage.PaintFragment">

    <tech.picnic.fingerpaintview.FingerPaintImageView
        android:id="@+id/finger"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_launcher_background"
        app:inEditMode="true"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finger"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/clear"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finger" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finger"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/clear"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="#515C6B"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/save">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Red"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tolerance"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/tolerance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="1"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/width"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="80"
                    android:progress="20"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/typeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/normal">

                <RadioButton
                    android:id="@+id/normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/emboss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emboss"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/blur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blur"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgColorPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/color_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutChoose" />
</androidx.constraintlayout.widget.ConstraintLayout>
